# PRNG-based-on-NN

./: .gitignore  CMakeLists.txt  Generator.hpp  GeneratorL_N.cpp  GeneratorL_N.hpp  HiTest.cpp  HiTest.hpp  LFSR.cpp  LFSR.hpp  NNH.cpp  PRNG_based_on_overfitting_MLP.ipynb  main.cpp  own.hpp  register.txt  widthMatrix.txt
include/: CCG.hpp  EmbGenerator.hpp  Generator.hpp  GeneratorL_N.hpp  GeneratorN.hpp  HiTest.hpp  LCG.hpp  NNH.hpp  Parser.hpp  Test.hpp  TimeTest.hpp  own.hpp
source/: CCG.cpp  CMakeLists.txt  EmbGenerator.cpp  GeneratorL_N.cpp  GeneratorN.cpp  HiTest.cpp  LCG.cpp  NNH.cpp  Parser.cpp  TimeTest.cpp
